--- a/week08-VAE-Diff/bhw2/hw_diff/configs/train.yaml
+++ b/week08-VAE-Diff/bhw2/hw_diff/configs/train.yaml
@@ -6,7 +6,7 @@ optimizer:
   lr: 2e-4
   weight_decay: 1e-2
 
-batch_size: 16
+batch_size: 32
 
 beta_schedule: "linear"
 T: 1000
@@ -18,7 +18,7 @@ lr_scheduler:
 
 arch:
   _target_: hw_diff.model.Unet
-  dim: 64
+  dim: 96
   dim_mults: [1, 2, 4, 4]
   channels: 3
   flash_attn: true
@@ -29,7 +29,7 @@ data:
     num_workers: 5
     datasets:
       - _target_: hw_diff.datasets.ImagesDataset
-        root: data/cats/cats
+        root: cats/cats
 
 loss:
   _target_: torch.nn.MSELoss
@@ -45,8 +45,8 @@ trainer:
   early_stop: 100
   visualize: "wandb"
   wandb_project: "duffusion_project"
-  wandb_run_name: "cats_test"
-  len_epoch: 2000
+  wandb_run_name: "datasphere_cats"
+  len_epoch: 1000
   grad_norm_clip: 100
 
   wandb_key: 91898ab676432e8d5689a2ce4a88f7131dc1e45c
